--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 					<h3>Swipe 10</h3>
 					<h1>Unleashing Trackpads.</h1>
 					<h5>Swipe10 is a software that can detect advanced multi finger gestures.</h5>
+					<form method="get" action="setup.zip">
+						<button class = "btn red" type="submit">Download!</button>
+					</form>
 				</div>
 				<div class="col-lg-8 col-lg-offset-2 himg">
 					<img src="assets/img/browser.png" class="img-responsive">
