--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
 	 			<p>Swipe10 is a windows applicaiton that acts as a driver overlay for a trackpad. Swipe10 processess user input and detects gestures. Currently 3 finger horizontal and vertical swipes and edge swipes are detected. These have been mapped to features like opening taskview and switching desktops to emulate windows 10's natural behaviour.</p>
 	 			<p><font color="#000" size="5">Why is this needed?</font></p>
 				<p>Synaptics, one of the worlds largest trackpad manufacturers has still not released drivers fully compatibale with windows 10 gestures. These laptops range from old old to the newest generation. Swipe10 steps in over compatibale hardware and handles gestures the right way.</p>
+				<p><font color="#000" size="5">How?</font></p>
+				<p>Swipe 10 interfaces with the existing trackpad driver to get the number of fingers on the trackpad and the absolute positon of the fingers. Using this, the implemented algorithm detects if the a gesture is made and executes the task related to the gesture.
 				<h4><br/>Abhinav Rajaseshan</h4>
 	 			<p>SOFTWARE ENGINEER - UNIVERSITY OF TORONTO</p>
 	 			</div>
